--- a/snackmall/apps/sm_auth/templates/auth/login.html
+++ b/snackmall/apps/sm_auth/templates/auth/login.html
@@ -1,42 +1,69 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<base href="./" />
+		<base href="/static/" />
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<link href="com_css/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 		<link href="auth/css/login.css" type="text/css" rel="stylesheet">
-		<title> </title>
+		<title>登陆</title>
+		
+		<!-- 初始化脚本 -->
+		<script>
+			function ag_init()
+			{
+				var login_status = {{ login_status|safe }};
+				
+				switch (login_status)
+				{
+					//正常进入
+					case 0:
+						break;
+					
+					//密码错误
+					case 1:
+					alert("账号或密码错误");
+						break;
+						
+					//正常进入
+					default:
+						break;
+				}
+			}
+		</script>
+		
 	</head>
-	<body>
+	<body onload="ag_init();">
 		<div id="page">
 			<div id="hd">
 				<div class="head">
-					<i class="fa fa-angle-left" style="font-size: 1.75rem; padding:10px ;"></i>
+					<i class="fa fa-angle-left" style="font-size: 1.75rem; padding:10px ;" onclick="javascript:history.back();"></i>
 					<span class="title">登陆</span>
 					<span></span>
 				</div>
 			</div>
 			<div id="bd">
-				<form>
+				<form id="data_form" method="post" action="/auth/check_login/">
+					{% csrf_token %}
 					<div class="loginBox">
 						<div class="textbox">
 							<i class="fa fa-user" aria-hidden="true" style="color: #555555;"></i>
-							<input type="text" placeholder="请输入手机号" id="usn" name="id" v-model="usn" maxlength="11"/>
+							<input type="text" placeholder="请输入手机号" id="usn" name="username" v-model="usn" maxlength="11"/>
 						</div>
 						<hr style="margin: 0 30px; border-top: #F4F4F4;" />
 						<div class="textbox">
 							<i class="fa fa-lock" aria-hidden="true" style="color: #555555;"></i>
-							<input type="password" placeholder="请输入密码" id="upw" name="passwd" v-model="upw"/>
+							<input type="password" placeholder="请输入密码" id="upw" name="password" v-model="upw"/>
 						</div>
 					</div>
 				</form>
-				<input type="button" class="btn" id="loginBtn" value="登陆" @click=" checkInfo() "/>
+				<input type="button" class="btn" id="loginBtn" value="登陆" @click="checkInfo() "/>
 				<!-- <button class="btnn">登陆</button> -->
 				<div class="loginTab">
-					<a href="forgetPsw.html">忘记密码</a>
-					<a href="register.html">注册</a>
+					<!-- <a href="/manager/forget_psw/">忘记密码</a> -->
+					<a style="color: gray;">忘记密码</a>
+					<a href="/auth/register/">注册</a>
 				</div>
 		  </div>
 		</div>
