--- a/snackmall/apps/sm_shop/static/shop/css/index.css
+++ b/snackmall/apps/sm_shop/static/shop/css/index.css
@@ -274,6 +274,10 @@ body{
 .notPay {
     background-color: #bbb;
 	line-height: 46px;
+	/* background-color: rgb(78, 207, 45); */
+	color: #FFFFFF;
+	font-size: 18px;
+	padding: 0 20px;
 }
 
 /* 运动小球 */
