--- a/snackmall/apps/sm_shop/templates/shop/index.html
+++ b/snackmall/apps/sm_shop/templates/shop/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<base href="static/" />
+		<base href="/static/" />
+		<!-- <base href="../../static/" /> -->
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<title>首页</title>
 		<link href="com_css/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/5.1.0/math.js"></script>
 		<link rel="stylesheet" type="text/css" media="screen" href="shop/css/index.css" />
 		<link rel="stylesheet" type="text/css" href="com_css/swiper.min.css" />
 		<script type="text/javascript">
@@ -22,8 +24,7 @@
 		</script>
 	</head>
 	<body>
-
-		<i class="fa fa-user-circle" aria-hidden="true" style="position: absolute;font-size: 24px; top: 11px; left: 9px; z-index: 100;"></i>
+		<i class="fa fa-user-circle" aria-hidden="true" style="cursor: pointer;position: absolute;font-size: 24px; top: 11px; left: 9px; z-index: 100;" onclick="window.location.href='/check_user/'"></i>
 		<div id="swiper" class="swiper-container">
 			<div class="swiper-wrapper">
 				<div class="swiper-slide"><img src="shop/img/pp-pdp-p7-splitblock1-lrg.jpg.large.1x.jpg" style="height: auto;width: auto;max-height: 100%;max-width: 100%;"/></div>
@@ -32,12 +33,12 @@
 			</div>
 			<!-- 如果需要分页器 -->
 			<div class="swiper-pagination"></div>
-
+		
 			<!-- 如果需要导航按钮 -->
 			<!-- 	<div class="swiper-button-prev"></div>
 				<div class="swiper-button-next"></div> -->
 		</div>
-
+		
 		<script src="com_js/swiper.min.js"></script>
 		<script>
 			var mySwiper = new Swiper('.swiper-container', {
@@ -49,28 +50,28 @@
 					stopOnLastSlide: false,
 					disableOnInteraction: true,
 				},
-
+		
 				// effect: 'fade',
-
+		
 				// 如果需要分页器
 				pagination: {
 					el: '.swiper-pagination',
 					dynamicBullets: true,
 				},
-
+		
 				// 如果需要前进后退按钮
 				navigation: {
 					nextEl: '.swiper-button-next',
 					prevEl: '.swiper-button-prev',
 				},
-
+		
 				// 如果需要滚动条
 				scrollbar: {
 					el: '.swiper-scrollbar',
 				},
 			});
 		</script>
-
+		
 		<div id="app">
 			<div class="goods">
 				<div class="left" ref="left">
@@ -80,14 +81,14 @@
 						<!-- v-bind 动态绑定class属性  对象 {key：value，key2：value2  类名：booleaen } -->
 					</ul>
 				</div>
-
-
+		
+		
 				<div class="right" @scroll="listScroll">
 					<ul>
 						<li v-for="(good, index1) in goods" :key="index1" :id="good.title">
 							<p class="goodTitle">[[good.title]]</p>
 							<ul class="good">
-
+		
 								<li v-for="(item, index2) in good.items" :key="index2">
 									<div class="imgBox">
 										<img :src="item.src" />
@@ -105,7 +106,7 @@
 										</div>
 									</div>
 									<!-- <div> -->
-
+		
 									<!-- </div> -->
 								</li>
 							</ul>
@@ -116,7 +117,7 @@
 					</ul>
 				</div>
 			</div>
-
+		
 			<!-- 运动的小球 -->
 			<div id="points">
 				<div class="pointOuter pointPre">
@@ -141,7 +142,7 @@
 					<div class="point-inner"></div>
 				</div>
 			</div>
-
+		
 			<div class="footer">
 					<div>
 						<i class="fa fa-shopping-cart" v-on:click="showShop()"></i>
@@ -149,14 +150,15 @@
 						<!--记录订单总数  -->
 						<div class="total" v-show="total>0">[[total]]</div>
 							<span class="totalPrice"><span style="font-size: 12px;">¥</span> [[totalPrice]]</span>
-							<span :class="{minPrice: totalPrice < 10, hidden:totalPrice >10 }">满10元起配送</span>
+							<!-- <span :class="{minPrice: totalPrice < 10, hidden:totalPrice >10 }">满10元起配送</span> -->
 					
-
-				<div :class="{pay: true, notPay: total==0}">去结算</div>
+					<!-- 添加跳转逻辑  -->
+				<div class="pay" v-show="total != 0" onclick="window.location.href='/pay/'">去结算</div>
+				<div class="notPay" v-show="total == 0">去结算</div>
 			</div>
 			<!-- 蒙版 -->
 			<div :class="{overlayer : IsShowlist , hidden : IsHidden}" @touchmove.prevent @click="showIndex()"></div>
-
+		
 			<section :class="{card_goods_list : IsShowlist , hidden : IsHidden}">
 				<header>
 					<h4>已选商品</h4>
@@ -167,7 +169,7 @@
 				</header>
 				<div class="goods_list">
 					<ul>
-						<li v-for="(s,index3) in shopList">
+						<li v-for="(s,index3) in shopList.list">
 							<p>[[s.name]]</p>
 							<div class="goods_list_price">
 								<div class="price_tab">[['¥'+s.price]]</div>
@@ -184,38 +186,57 @@
 				</div>
 			</section>
 		</div>
-
+		
+		<script>
+			//引入math.js 解决js计算精度问题 ,该方法要在index.js加载前进行加载
+			function printFn(value) {
+			    const precision = 14
+			    return Number(math.format(value, precision))
+			}
+		</script>
+		
 		<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 		<script src="com_js/vue.js"></script>
 		<script src="shop/js/index.js"></script>
+		
+		<!-- 【获取后端传递过来的数据】 -->
 		<script>
 			app.$data.navs = {{ data_navs|safe }};
 			app.$data.goods = {{ data_goods|safe }};
 		</script>
+		
 		<script>
-			for (var i = 0; i < localStorage.length; i++) {
-				//获取本地储存的key
-				var key = localStorage.key(i);
-				var good = localStorage.getItem(key);
-				good = JSON.parse(good);
-				// console.log(good);
-				app.$data.shopList.push(good);
-				console.log(app.$data.goods.length);
-				console.log(good.type);
-				//修改商品对象
-				// for(var j= 0;  j<app.$data.goods.length ;j++ ){
-				// 	if(app.$data.goods[j].title == good.type){
-				// 		for(var k=0; k<app.$data.goods[j].items.length ;k++){
-				// 			// console.log("当前数组长度为："+app.$data.goods[j])
-				// 			if(key == app.$data.goods[j].items[k].name){
-				// 				app.$data.goods[j].items[k].num = good.num;
-				// 			}
-				// 		}
-				// 	}
-				// }
-				
+			// for (var i = 0; i < localStorage.length; i++) {
+			// 	//获取本地储存的key
+			// 	var key = localStorage.key(i);
+			// 	var good = localStorage.getItem(key);
+			// 	good = JSON.parse(good);
+			// 	app.$data.shopList.push(good);
+			// 	console.log(app.$data.goods.length);
+			// 	console.log(good.type);
+			
+			var key = localStorage.key(0);
+			var shopList = localStorage.getItem(key);
+			shopList = JSON.parse(shopList);
+			for(var i =0; i<shopList.list.length ; i++ ){
+				app.$data.shopList.list.push(shopList.list[i]);
+				// 修改商品对象
+				for(var j= 0;  j<app.$data.goods.length ;j++ ){
+					if(app.$data.goods[j].title == shopList.list[i].type){
+						for(var k=0; k<app.$data.goods[j].items.length ;k++){
+							// console.log("当前数组长度为："+app.$data.goods[j])
+							if(shopList.list[i].name == app.$data.goods[j].items[k].name){
+								app.$data.goods[j].items[k].num = shopList.list[i].num;
+							}
+						}
+					}
+				}
 			}
+				
+			
+				
+			// }
 		</script>
-
+		
 	</body>
 </html>
