fix:修改了时间选择器

--- a/snackmall/apps/sm_shop/static/shop/css/pay.css
+++ b/snackmall/apps/sm_shop/static/shop/css/pay.css
@@ -211,10 +211,11 @@ body {
 
 .pickTime{
 	border: none;
-	outline: none;
-	background: none;
-	font-size: 14px;
-	padding: 10px;
+	border-bottom: 1px solid #EEEEEE;
+	height: 50px;
+	width: 100%;
+	font-size: 20px;
+	text-align: center;
 
 }
 
