--- a/snackmall/apps/sm_shop/templates/shop/pay.html
+++ b/snackmall/apps/sm_shop/templates/shop/pay.html
@@ -95,7 +95,7 @@
 					<p>自提时间备注（仅限当天）</p>
 				</div>
 				<div>
-					<input type="text" id="pickTime" name="time" class="pickTime" placeholder="请填写预计取货时间" v-model="RecvInfoC_DO.time" />
+					<input type="text" id="pickTime" name="time" class="pickTime" placeholder="填写取货时间(例如:19:00)" v-model="RecvInfoC_DO.time" />
 				</div>
 				<!-- <hr style="margin: 0 10px; border-top: #F4F4F4;" /> -->
 			</div>
