--- a/snackmall/apps/sm_shop/templates/shop/pay.html
+++ b/snackmall/apps/sm_shop/templates/shop/pay.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<base href="/static/" />
+		<!-- <base href="../../static/" /> -->
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
