fix：修改了订单列表页的功能逻辑代码，以及删除total属性

--- a/snackmall/apps/sm_info/templates/info/my_orders.html
+++ b/snackmall/apps/sm_info/templates/info/my_orders.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<base href="/static/" />
+		<!-- <base href="../../static/" /> -->
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -22,7 +23,7 @@
 				<div class="orders_list">
 					<ul>
 						<!-- 在li标签添加点击跳转页面的逻辑 -->
-						<li v-for="(item,index) in orderList" :key="index" @click="  ">
+						<li v-for="(item,index) in orderList" :key="index" @click="linkTo( index )">
 							<div class="order_card_header">
 								<div class="order_status">
 									<div :class="{status_circle_on : item.status =='已接单', status_circle_out :item.status !='已接单'}"></div><span
@@ -39,7 +40,7 @@
 								</ul>
 							</div>
 							<div class="order_card_footer">
-								<span>共[[item.total]]件商品</span><span style="font-size: 15px; padding-left: 15px;"> 合计：¥ [[item.shopList.sum]]</span>
+								<span style="font-size: 15px; padding-left: 15px;"> 合计：¥ [[item.shopList.sum]]</span>
 							</div>
 						</li>
 					</ul>
@@ -59,22 +60,15 @@
 		</script>
 		
 		<script>
-			// function init() {
-				var page = 0;
-				// 初始化发送页面请求
-				xmlHttp =  new XMLHttpRequest;
-				xmlHttp.open("post","//");
-				xmlHttp.send(app.$data.id);
-				for (let i = 0; i < app.$data.orderList.length; i++) {
-					let total = 0;
-					for (let j = 0; j < app.$data.orderList[i].shopList.list.length; j++) {
-						total += app.$data.orderList[i].shopList.list[j].num;
-					}
-					app.$data.orderList[i].total = total;
+			var page = 0;
+			var json = get_orderList( page );
+			if(json.result){
+				for (let i = 0; i < json.list.length; i++) {
+					this.orderList.push(json.list[i]);
 				}
-				
-				
-			// }
+			}else{
+				this.is_show = false;
+			}
 		</script>
 	</body>
 </html>
