feat:订单相关页面的所有路由都已正确配置

--- a/snackmall/apps/sm_info/templates/info/order_detail.html
+++ b/snackmall/apps/sm_info/templates/info/order_detail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<base href="./" />
+		<base href="/static/" />
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -95,6 +95,11 @@
 		
 		<script src="com_js/vue.js"></script>
 		<script src="info/js/order_detail.js"></script>
+		
+		<script>
+			app.$data.return_route = '{{ data_return_route|safe }}';
+		</script>
+		
 		<script>
 			//初始化计算商品数量
 			for(let i=0; i<app.$data.order.shopList.list.length; i++){
