feat:订单详情页绝大部分功能和整合完成

--- a/snackmall/apps/sm_info/templates/info/order_detail.html
+++ b/snackmall/apps/sm_info/templates/info/order_detail.html
@@ -98,6 +98,11 @@
 		
 		<script>
 			app.$data.return_route = '{{ data_return_route|safe }}';
+			
+			var json_order = '{{ data_order|safe }}';
+			var data_order = JSON.parse(json_order);
+			
+			app.$data.order = data_order;
 		</script>
 		
 		<script>
