--- a/snackmall/apps/sm_info/templates/info/order_detail.html
+++ b/snackmall/apps/sm_info/templates/info/order_detail.html
@@ -65,17 +65,20 @@
 							<span class="info_name">订单编号：</span><span>[[order.id]]</span>
 						</div>
 						<div class="order-info-line">
-							<span class="info_name">收货地址：</span>
-							<span>
+							<span class="info_name">配送方式：</span><span v-show="order.recv_method">送货上门</span> <span v-show="!order.recv_method">自提</span>
+						</div>
+						<div v-if="order.recv_method" class="order-info-line">
+							<span v-if="order.recv_method" class="info_name">收货地址：</span>
+							<span v-if="order.recv_method">
 								[['学生宿舍'+ order.recv_info.recv_location.building+order.recv_info.recv_location.dormi_num ]]<br>
 								[[order.recv_info.recv_name]]&nbsp;&nbsp;&nbsp;[[order.recv_info.recv_phone]]
 							</span>
 						</div>
-						<div class="order-info-line">
+						<!-- <div class="order-info-line">
 							<span class="info_name">配送方式：</span><span v-show="order.recv_method">送货上门</span> <span v-show="!order.recv_method">自提</span>
-						</div>
-						<div class="order-info-line" v-show="!order.recv_method">
-							<span class="info_name">自提时间</span><span>[[order.recv_info.time]]</span>
+						</div> -->
+						<div v-if="!order.recv_method" class="order-info-line" v-show="!order.recv_method">
+							<span v-if="!order.recv_method" class="info_name">自提时间：</span><span>[[order.recv_info.recv_info.time]]</span>
 						</div>
 						<div class="order-info-line">
 							<span class="info_name">下单时间：</span><span>[[order.dt]]</span>
