--- a/snackmall/apps/sm_shop/templates/shop/index.html
+++ b/snackmall/apps/sm_shop/templates/shop/index.html
@@ -28,9 +28,10 @@
 		<i class="fa fa-list-alt" aria-hidden="true" style="cursor: pointer;position: absolute;font-size: 24px; top: 11px; right: 9px; z-index: 101;" onclick="window.location.href='/info/my_orders/from_index/'"></i>
 		<div id="swiper" class="swiper-container">
 			<div class="swiper-wrapper">
-				<div class="swiper-slide"><img src="shop/img/pp-pdp-p7-splitblock1-lrg.jpg.large.1x.jpg" style="height: auto;width: auto;max-height: 100%;max-width: 100%;"/></div>
-				<div class="swiper-slide">2</div>
-				<div class="swiper-slide">3</div>
+				<!-- <div class="swiper-slide"><img src="shop/img/pp-pdp-p7-splitblock1-lrg.jpg.large.1x.jpg" style="height: auto;width: auto;max-height: 100%;max-width: 100%;"/></div> -->
+				<div class="swiper-slide"></div>
+				<div class="swiper-slide"></div>
+				<div class="swiper-slide"></div>
 			</div>
 			<!-- 如果需要分页器 -->
 			<div class="swiper-pagination"></div>
@@ -114,7 +115,7 @@
 						</li>
 						
 						<!-- 页面跳转至反馈入口 -->
-						<li class="tellme">还想吃啥？告诉我<i class="fa fa-chevron-circle-right" aria-hidden="true" style="padding-left: 10px;color: #535455"></i></li>
+						<!-- <li class="tellme">还想吃啥？告诉我<i class="fa fa-chevron-circle-right" aria-hidden="true" style="padding-left: 10px;color: #535455"></i></li> -->
 					</ul>
 				</div>
 			</div>
