--- a/snackmall/apps/sm_auth/static/auth/css/register.css
+++ b/snackmall/apps/sm_auth/static/auth/css/register.css
@@ -26,6 +26,7 @@ a {
 body {
 	background: #F4F4F4;
 	font-size: 14px;
+	font-family: "Helvetica Neue",Helvetica,Arial,"Microsoft Yahei","Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
 }
 
 .RegisterBox {
@@ -92,7 +93,7 @@ body {
 	height: 44px;
 	width: 90%;
 	margin: 1.4375rem 5% 0.625rem;
-	line-height: 26px;
+	line-height: 44px;
 	border-radius: 8px;
 	background-color: rgba(28, 223, 112, 1);
 	color: rgba(255, 255, 255, 1);
@@ -104,7 +105,7 @@ body {
 	height: 44px;
 	width: 90%;
 	margin: 1.4375rem 5% 0.625rem;
-	line-height: 26px;
+	line-height: 44px;
 	border-radius: 8px;
 	background-color: #129F4F;
 	color: rgba(255, 255, 255, 1);
@@ -112,7 +113,7 @@ body {
 	text-align: center;
 }
 
-.toLogin {
+/* .toLogin {
 	height: 44px;
 	width: 89%;
 	margin: 0.1875rem 5%;
@@ -134,7 +135,7 @@ body {
 	line-height: 44px;
 	font-size: 18px;
 	border: #129F4F 2px solid;
-}
+} */
 
 
 .hidden {
