--- a/snackmall/apps/sm_auth/templates/auth/login.html
+++ b/snackmall/apps/sm_auth/templates/auth/login.html
@@ -58,7 +58,8 @@
 						</div>
 					</div>
 				</form>
-				<input type="button" class="btn" id="loginBtn" value="登陆" @click="checkInfo() "/>
+				<!-- <input type="button" class="btn" id="loginBtn" value="登陆" @click="checkInfo() "/> -->
+				<div class="btn" id="loginBtn" @click="checkInfo()">登陆</div>
 				<!-- <button class="btnn">登陆</button> -->
 				<div class="loginTab">
 					<!-- <a href="/manager/forget_psw/">忘记密码</a> -->
