--- a/snackmall/apps/sm_info/static/info/css/my_orders.css
+++ b/snackmall/apps/sm_info/static/info/css/my_orders.css
@@ -12,6 +12,7 @@ html,body {
 	font-size: 14px;
 	color: #3E3E3E;
 	height: 100%;
+	font-family: "Helvetica Neue",Helvetica,Arial,"Microsoft Yahei","Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
 }
 
 
