--- a/snackmall/apps/sm_info/static/info/css/order_detail.css
+++ b/snackmall/apps/sm_info/static/info/css/order_detail.css
@@ -24,6 +24,7 @@ body {
 	font-size: 14px;
 	height: 100%;
 	color: #3E3E3E;
+	font-family: "Helvetica Neue",Helvetica,Arial,"Microsoft Yahei","Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
 }
 
 #app {
