--- a/snackmall/apps/sm_manager/static/manager/css/forgetPsw.css
+++ b/snackmall/apps/sm_manager/static/manager/css/forgetPsw.css
@@ -26,6 +26,7 @@ a{
 body {
 	background: #F4F4F4;
 	font-size: 14px;
+	font-family: "Helvetica Neue",Helvetica,Arial,"Microsoft Yahei","Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
 }
 
 .ResetBox {
