--- a/snackmall/apps/sm_shop/static/shop/css/index.css
+++ b/snackmall/apps/sm_shop/static/shop/css/index.css
@@ -26,6 +26,7 @@ header {
 
 body{
 	font-size: 14px;
+	font-family: "Helvetica Neue",Helvetica,Arial,"Microsoft Yahei","Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;sssss
 }
 
 /* h4 {
