--- a/snackmall/apps/sm_shop/static/shop/css/pay.css
+++ b/snackmall/apps/sm_shop/static/shop/css/pay.css
@@ -19,6 +19,7 @@ a {
 body {
 	background-color: #F4F4F4;
 	font-size: 14px;
+	font-family: "Helvetica Neue",Helvetica,Arial,"Microsoft Yahei","Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
 }
 
 .head {
