feat:增加“增加“退出登陆”按钮

--- a/snackmall/apps/sm_manager/templates/manager/user_homepage.html
+++ b/snackmall/apps/sm_manager/templates/manager/user_homepage.html
@@ -46,6 +46,12 @@
 						</div>
 						<span>收货地址</span>
 					</div>
+					<div class="bottom_row" @click="logout()">
+						<div style="width: 10px; display: inline-block;">
+						<i class="fa fa-map-marker" aria-hidden="true"></i>
+						</div>
+						<span>退出登陆</span>
+					</div>
 				</div>
 			</div>
 			
