--- a/snackmall/apps/sm_shop/templates/shop/index.html
+++ b/snackmall/apps/sm_shop/templates/shop/index.html
@@ -28,10 +28,9 @@
 		<i class="fa fa-list-alt" aria-hidden="true" style="cursor: pointer;position: absolute;font-size: 24px; top: 11px; right: 9px; z-index: 101;" onclick="window.location.href='/info/my_orders/from_index/'"></i>
 		<div id="swiper" class="swiper-container">
 			<div class="swiper-wrapper">
-				<!-- <div class="swiper-slide"><img src="shop/img/pp-pdp-p7-splitblock1-lrg.jpg.large.1x.jpg" style="height: auto;width: auto;max-height: 100%;max-width: 100%;"/></div> -->
-				<div class="swiper-slide"></div>
-				<div class="swiper-slide"></div>
-				<div class="swiper-slide"></div>
+				<div class="swiper-slide"><img src="shop/img/index_bannner_1.jpg" style="height: auto;width: auto;max-height: 100%;max-width: 100%;"/></div>
+				<div class="swiper-slide"><img src="shop/img/index_bannner_2.jpg" style="height: auto;width: auto;max-height: 100%;max-width: 100%;"/></div>
+				<div class="swiper-slide"><img src="shop/img/index_bannner_3.jpg" style="height: auto;width: auto;max-height: 100%;max-width: 100%;"/></div>
 			</div>
 			<!-- 如果需要分页器 -->
 			<div class="swiper-pagination"></div>
